@@ -1,3 +1,6 @@
+#! /usr/bin/env python3
+# -*- mode: Python; -*-
+
 from PyQt4.QtCore import *
 from PyQt4.QtGui  import *
 
